Refreshed routes and swagger
